2006-08-05  Bas Wijnen <shevek@fmf.nl>
	* client/gtk/connect.c: Avoid use of comma-operator.
	* client/ai/greedy.c: Fix possible infinite loop after playing
	monopoly card.
	* docs/README.states, docs/client_states.fig: Updated to new
	situation (the changes below, and changes which had been made before).
	* common/state.c, common/state.h, client/common/client.c,
	client/common/callback.c: Improved state handling.

2006-08-04  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/interface.c: Enable roll dice for the second game of the
	same instance of the client.
	* client/common/client.c: Don't show waiting for your turn for
	viewers.
	* client/ai/greedy.c: AI can trade lumber again.
	* server/turn.c: Unregister from the metaserver at game over.
	* server/coeur.game: Don't shuffle gold tiles.
	* client/gtk/gui.c: Settings used wrong variable.
	* README.subversion: Information about building from the subversion
	repository.
	* editor/gtk/editor.c, common/gtk/guimap.c, common/gtk/guimap.h,
	client/gtk/callbacks.c, client/gtk/gui.c, client/gtk/gui.h: Show
	nosetup nodes in the editor and in the client (for players only).
	* client/common/resource.c: Fix regression of 2006-07-27.
	* docs/README.release, client/callback.h, client/gtk/interface.c,
	client/gtk/callbacks.c, client/gtk/frontend.h, client/gtk/chat.c,
	client/common/client.c, client/common/client.h,
	client/common/Makefile.am, client/common/player.c,
	client/common/chat.c, client/ai/ai.h, client/ai/greedy.c,
	client/ai/Makefile.am, client/ai/ai.c, client/ai/lobbybot.c: Added
	robot for the lobby.
	* client/gtk/interface.c, client/gtk/frontend.h, client/gtk/discard.c,
	client/gtk/state.c, client/gtk/offline.c, client/gtk/gui.c: Leave a
	game without quitting the client.
	
2006-08-01  Bas Wijnen <shevek@fmf.nl>
	* configure.ac: Mention install root in notification.
	* configure.ac, Makefile.am: Let configure.ac not touch AM_*
	variables.

2006-07-29  Roland Clobus <rclobus@bigfoot.com>